REGRESSION: RELEASE_ASSERT in CodeBlock::baselineVersion @ cnn.com https://bugs.webkit.org/show_bug.cgi?id=132581

Reviewed by Filip Pizlo.

* dfg/DFGPlan.cpp:
(JSC::DFG::Plan::isStillValid): Check that the alternative codeBlock we
started compiling for is still the same at the end of compilation.
Also did some minor restructuring.


Canonical link: https://commits.webkit.org/150603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168319 268f45cc-cd09-0410-ab3c-d52691b4dbfc